--- a/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 ﻿<!DOCTYPE html>
 <html lang="bg">
 <head>
